--- a/js/js.html
+++ b/js/js.html
@@ -9,6 +9,6 @@
   <body>
     <h1>javascrpit basics</h1>
 
-    <script src="java.js"></script>
+    <script src="javascript.js"></script>
   </body>
 </html>
