--- a/js-basics2/index.html
+++ b/js-basics2/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>javascrpit basics</h1>
     <p></p>
-    <script src="java.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
