--- a/js-DOM/dom.html
+++ b/js-DOM/dom.html
@@ -14,7 +14,9 @@
       <li class="fruits">orange</li>
       <li class="fruits">guavas</li>
     </ul>
-    <h2 class="h1">hello world</h2>
+    <h2 >hello world</h2>
+    <h3 class="heading">hello world</h3>
+    
     <script src="dom.js"></script>
   </body>
 </html>
