--- a/js-DOM/dom.html
+++ b/js-DOM/dom.html
@@ -7,7 +7,7 @@
     <title>DOM</title>
   </head>
   <body>
-    <h1 id="h1">DOM</h1>
+    <h1 id="heading">DOM</h1>
     <ul>
       <li class="fruits">mango</li>
       <li class="fruits">pear</li>
@@ -15,7 +15,7 @@
       <li class="fruits">guavas</li>
     </ul>
     <h2 >hello world</h2>
-    <h3 class="heading">hello world</h3>
+    <h3 class="h1">hello world</h3>
     
     <script src="dom.js"></script>
   </body>
