--- a/js-DOM/dom.html
+++ b/js-DOM/dom.html
@@ -8,15 +8,24 @@
   </head>
   <body>
     <h1 id="heading">DOM</h1>
-    <ul>
-      <li class="fruits">mango</li>
-      <li class="fruits">pear</li>
-      <li class="fruits">orange</li>
-      <li class="fruits">guavas</li>
-    </ul>
-    <h2 >hello world</h2>
+    <div class="div" href="">
+      <ul>
+        <li class="fruits">mango</li>
+        <li class="fruits">pear</li>
+        <li>orange</li>
+        <li>guavas</li>
+      </ul>
+    </div>
+
+    <button id="btn">click</button>
+    <h2>hello world</h2>
     <h3 class="h1">hello world</h3>
-    
+
+    <div>
+      <h1 class="heading2 header">adding classes</h1>
+    </div>
+    <div class="parent">hh</div>
+
     <script src="dom.js"></script>
   </body>
 </html>
